--- a/css/global.scss
+++ b/css/global.scss
@@ -36,6 +36,7 @@ body {
     background: $white;
     min-height: 100%;
     position: relative;
+    overflow-x: hidden;
     a {
         color: $color-quaternary;
         text-decoration: underline;
