--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body {
   color: #7591A3;
   background: #fff;
   min-height: 100%;
-  position: relative; }
+  position: relative;
+  overflow-x: hidden; }
   body a {
     color: #C1E3E2;
     text-decoration: underline; }
